[package]
edition = "2021"
name = "multirate"
version = "0.1.0"
authors = ["Jay Kickliter <jay@kickliter.com>"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[features]
default = []
serde-support = [ "serde" ]

[profile.release]
debug = true

[dependencies]
itertools = "0.10"
multiversion = "0.6"
num-traits = "0.2"
serde = { version = "1", optional = true, features = [ "derive" ] }

[dev-dependencies]
approx = "0.5"
